Auto Configuration in DAO layer using application.properties

--- a/SPBoot03-AutoConfiguration/src/main/resources/application.properties
+++ b/SPBoot03-AutoConfiguration/src/main/resources/application.properties
@@ -8,3 +8,16 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/springdb
 spring.datasource.username=root
 spring.datasource.password=root
+
+#spring.datasource.type=oracle.ucp.jdbc.PoolDataSourceImpl
+#com.zaxxer.hikari.HikariDataSource
+#org.apache.tomcat.jdbc.pool.DataSource
+#org.apache.commons.dbcp2.BasicDataSource
+#oracle.ucp.jdbc.PoolDataSourceImpl
+
+#c3p0
+
+#1. Hikari DS
+#2. Tomcat jdbc DS   
+#3. Apache dbcp2 DS
+#4. Oracle ucp DS 
