--- a/SPBoot08-SpringBootProfiles-LayeredApplicationUsingPropertiesFile/src/main/resources/application-prod.properties
+++ b/SPBoot08-SpringBootProfiles-LayeredApplicationUsingPropertiesFile/src/main/resources/application-prod.properties
@@ -2,3 +2,5 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=scott
 spring.datasource.password=tiger
+
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
