--- a/SPBoot08-SpringBootProfiles-LayeredApplicationUsingPropertiesFile/src/main/resources/application.properties
+++ b/SPBoot08-SpringBootProfiles-LayeredApplicationUsingPropertiesFile/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.profiles.active=dev
+spring.profiles.active=uat,prod
 
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 #spring.datasource.username=scott
 #spring.datasource.password=tiger
+
+
 
